# base64c

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile.am  README.adoc  TODO.adoc  base64c.c  base64c.h  base64c.pc.in  configure.ac  libbase64c.version
.gitlab-ci/: Dockerfile  release.sh
tests/: Makefile.am  base64c.c  base64c.h  unittests.c
